# NovelNotlify

./: .env.example  .gitignore  CHAPTER_COMPARISON.md  COMMANDS.md  README.md  ecosystem.config.js  pyproject.toml  pytest.ini  requirements.txt  run.py  setup.py  setup_ecosystem.sh  start_bot.py  test_chapter_comparison.py  test_scraping.py  test_shutdown.py  test_shutdown_improvements.py
.github/instructions/: cors.instructions.md  initial-prompt.md  test.instructions.md
novel_notify/: __init__.py  config.py  main.py
novel_notify/bot/: __init__.py  handlers.py  scheduler.py
novel_notify/database/: __init__.py  models.py
novel_notify/scraper/: __init__.py
novel_notify/utils/: __init__.py
tests/: conftest.py  test_database_manager.py  test_handlers.py  test_scheduler.py  test_scraper.py
